# AquaSensor-software-projects-y2s2

./: .dockerignore  .gitignore  .repomixignore  compose.yml  middleware.Dockerfile  pyproject.toml  repomix-output.xml  seed.py  stream-processor.Dockerfile  waterPartialPressure.json
.github/workflows/: deploy.yml
api-middleware/src/api_middleware/: __init__.py  app.py  downstream_auth.py  functions.py  historical.py  models.py
bad prototype/: api.php  functions.js  leaftest.html  sensors.php
demos/: obfuscation.html
docs/: Aquasensor 2 slidedeck.pptx  Requirements.md  Testsuite.md  api-issues.md  architecture-chart.md  architecture.md  configdoc.md  geo-river-data.md  testingplan.md  testsuite.md
envs/: .gitignore  influx.example.env  middleware.example.env  streamer.example.env
mqtt/: mqtt.py  pyproject.toml  random_tester.py  test.py
src/aquasensor_backend/: ORM.py  __init__.py  app.py  cache.py  config.py  lifespan.py  mail.py  routes.py  security.py  templates.py
src/aquasensor_backend/api/: __init__.py  auth.py  graphql.py  sensors.py  studio.py  utils.py
src/aquasensor_backend/models/: auth.py  sensor.py
src/frontend/: aboutus.html  base.html  chart.html  contactus.html  correlation.html  dataFunction.js  dataLoading.js  datasearching.js  devices.js  e404.html  eSmoothing.js  faq.html  index.html  loginsuccess.html  loginsuccessbase.html  map.html  map.php  privacy-policy.html  register.html  signin.html  sitemap.xml  studio-mobile.html  studio.html  studio_mobile.html  test.html
tests/backend/: test_auth.py  test_sensors.py
tests/lighthouse/: main.py
(+29 files in other folders)
