[project]
name = "aquasensor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.3",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.7",
    "jinja2>=3.1.5",
    "loguru>=0.7.3",
    "pydantic[email]>=2.10.6",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[project.scripts]
aquasensor-backend = "aquasensor_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["api-middleware"]
